--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -3,19 +3,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <%= javascript_pack_tag "application" %>
   </head>
-  <body class="content-page-body" id="<%= controller.controller_name %>-<%= controller.action_name %>">
+  <body class="project-page content-page-body" id="<%= controller.controller_name %>-<%= controller.action_name %>">
     <%= render 'layouts/header' %>
-    <div class="board-box">
+    <div class="board-box position-relative">
       <div class="project-title"><%= Project.find_by_hashid(params[:id]).name %> </div>
       <div class="project-splitter-bold"></div>
       <div class="project-splitter-light"></div>
 
-      <div class="mission-list-area">
-	<ul>
-	  <li class="mission-list">
-	    默认任务清单
-	  </li>
-	</ul>
+      <div class="mission-list-area-parent">
+	<div class="mission-list-area">
+	  <ul>
+	    <li class="mission-list">
+	      默认任务清单1
+	    </li>
+	    <li class="mission-list">
+	      默认任务清单2
+	    </li>
+	    <li class="mission-list">
+	      默认任务清单3
+	    </li>
+	    <li class="mission-list">
+	      默认任务清单4
+	    </li>
+	    <li class="mission-list">
+	      默认任务清单5
+	    </li>
+	    <li class="mission-list">
+	      默认任务清单6
+	    </li>
+	    <li>
+	      <a href="#" class="mission-list-add-button">添加新任务清单</a>
+	    </li>
+	  </ul>
+	</div>
       </div>
 
       <ul class="mission-list-title">默认任务清单
