--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -65,233 +65,133 @@
 
       <ul class="mission-list-title"
           data-target="mission.missionListTitle">默认任务清单
-        <li>
-          <label class="mission-container">完成任务清单试图
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
+	<li>
+	  <input type="checkbox" id="checkbox">
+          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <label class="mission-container">完成任务试图
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
+          <input type="checkbox" id="checkbox">
+          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <label class="mission-container">完成任务清单添加
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
+          <input type="checkbox" id="checkbox">
+          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <label class="mission-container">完成任务添加
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
+          <input type="checkbox" id="checkbox">
+          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <label class="mission-container">完成任务清单试图
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
+          <input type="checkbox" id="checkbox">
+          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <label class="mission-container">完成任务试图
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
+          <input type="checkbox" id="checkbox">
+          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <label class="mission-container">完成任务添加
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
+          <input type="checkbox" id="checkbox">
+          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <label class="mission-container">完成任务清单试图
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
+          <input type="checkbox" id="checkbox">
+          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <label class="mission-container">完成任务试图
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
+          <input type="checkbox" id="checkbox">
+          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <label class="mission-container">完成任务清单添加
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
+          <input type="checkbox" id="checkbox">
+          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <label class="mission-container">完成任务添加
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
+          <input type="checkbox" id="checkbox">
+          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <label class="mission-container">完成任务清单试图
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
+          <input type="checkbox" id="checkbox">
+          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <label class="mission-container">完成任务试图
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
+          <input type="checkbox" id="checkbox">
+          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <label class="mission-container">完成任务添加
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
+          <input type="checkbox" id="checkbox">
+          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <label class="mission-container">完成任务清单试图
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
+          <input type="checkbox" id="checkbox">
+          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <label class="mission-container">完成任务试图
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
+          <input type="checkbox" id="checkbox">
+          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <label class="mission-container">完成任务清单添加
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
+          <input type="checkbox" id="checkbox">
+          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <label class="mission-container">完成任务添加
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
+          <input type="checkbox" id="checkbox">
+          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <label class="mission-container">完成任务清单试图
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
+          <input type="checkbox" id="checkbox">
+          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <label class="mission-container">完成任务试图
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
+          <input type="checkbox" id="checkbox">
+          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <label class="mission-container">完成任务添加
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
+          <input type="checkbox" id="checkbox">
+          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
-          <label class="mission-container">完成任务清单试图
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
-        </li>
-        <li>
-          <label class="mission-container">完成任务试图
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
-        </li>
-        <li>
-          <label class="mission-container">完成任务清单添加
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
-        </li>
-        <li>
-          <label class="mission-container">完成任务添加
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
-        </li>
-        <li>
-          <label class="mission-container">完成任务清单试图
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
-        </li>
-        <li>
-          <label class="mission-container">完成任务试图
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
-        </li>
-        <li>
-          <label class="mission-container">完成任务添加
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
-        </li>
-        <li>
-          <label class="mission-container">完成任务清单试图
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
-        </li>
-        <li>
-          <label class="mission-container">完成任务试图
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <button type="button" class="btn mission-distributor">未指派</button>
-          </label>
+          <input type="checkbox" id="checkbox">
+          <label for="checkbox" class="mission-title">完成任务清单试图</label>
+          <button type="button" class="btn mission-distributor">未指派</button>
         </li>
         <li>
           <div class="mission-new-form"
-               data-target="mission.missionNewForm">
+	       data-target="mission.missionNewForm">
             <%= form_for(:project, url: "#") do |f| %>
-              <div class="flex-vcenter">
+	      <div class="flex-vcenter">
                 <label class="mission-new-rectangle"></label>
                 <input type="text" class="mission-new-input" placeholder="新的任务">
                 <button type="button" class="btn mission-distributor">未指派</button>
-              </div>
-              <div>
+	      </div>
+	      <div>
                 <%= f.submit "添加任务", class: "btn-sm mission-new-submit-button" %>
 		<a href="#"
 		   class="link-button-small"
 		   data-target="mission.missionCancelButton"
 		   data-action="mission#clickMissionCancelButton">
 		  取消</a>
-              </div>
+	      </div>
             <% end %>
           </div>
         </li>
